--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,33 +7,19 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = "1"
-arrayref = "0.3"
-async-stream = "0.3"
-bytes = "1"
 clap = "3.0.0-beta"
-ethereum = { git = "https://github.com/rust-blockchain/ethereum", branch = "vorot93/dev" }
+ethdb = { git = "https://github.com/rust-ethereum/ethdb" }
+ethereum = { git = "https://github.com/rust-blockchain/ethereum" }
 ethereum-tarpc-api = { git = "https://github.com/rust-ethereum/tarpc-api" }
-ethereum-types = { git = "https://github.com/paritytech/parity-common" }
+ethereum-types = "0.10"
 futures = "0.3"
-hex = "0.4"
-maplit = "1"
-parking_lot = "0.11"
-prost = "0.6"
-rlp = { git = "https://github.com/paritytech/parity-common" }
-rlp-derive = { git = "https://github.com/paritytech/parity-common" }
 serde = "1"
 serde_json = "1"
-tarpc = { version = "0.23", features = ["full"] }
+tarpc = { version = "0.24", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
-tokio-compat-02 = { git = "https://github.com/vorot93/tokio-compat-02", branch = "vorot93/tokio-1" }
+tokio-compat-02 = "0.2"
 tokio-serde = { version = "0.8", features = ["bincode"] }
 tokio-stream = "0.1"
 tonic = { version = "0.3", features = ["tls"] }
 tracing = "0.1"
 tracing-subscriber = "0.2"
-
-[build-dependencies]
-tonic-build = "0.3"
-
-[patch.crates-io]
-tarpc = { git = "https://github.com/google/tarpc" }
